improved usage for cloud models